--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
     "version": "1.0.0",
     "main": "app.js",
     "scripts": {
-        "test": "nodemon app.js"
+        "start": "nodemon app.js"
+    },
+    "engines": {
+        "node": "10.16.0"
     },
     "keywords": [],
     "author": "Me",
