--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "express-messages": "^1.0.1",
         "express-session": "^1.15.2",
         "filecompare": "^1.0.4",
+        "googleapis": "^39.2.0",
         "joi": "^14.3.1",
         "kue": "^0.11.6",
         "mongoose": "^5.9.16",
