--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "author": "Me",
     "license": "ISC",
     "dependencies": {
+        "@azure/storage-blob": "^12.2.1",
+        "@azure/storage-file-share": "^12.2.0",
         "ace-builds": "^1.4.12",
         "ace-code-editor": "^1.2.3",
+        "amqplib": "^0.6.0",
         "async": "^3.2.0",
         "awesome-notifications": "^3.1.1",
         "bcrypt": "^4.0.1",
@@ -27,6 +30,7 @@
         "cookie-parser": "^1.4.3",
         "custom-code-editor": "^3.1.8",
         "display-notification": "^2.0.0",
+        "dotenv": "^8.2.0",
         "express": "^4.15.2",
         "express-handlebars": "^3.0.0",
         "express-messages": "^1.0.1",
