--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "fs": "0.0.1-security",
     "mongoose": "^5.10.7",
     "node-notifier": "^8.0.0",
+    "path": "^0.12.7",
     "qrate": "^1.2.0"
   },
   "devDependencies": {}
