--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "child_process": "^1.0.2",
         "compile-run": "^2.3.2",
         "compilex": "^0.7.4",
+        "connect-busboy": "0.0.2",
         "connect-flash": "^0.1.1",
         "cookie-parser": "^1.4.3",
         "custom-code-editor": "^3.1.8",
@@ -33,6 +34,7 @@
         "dotenv": "^8.2.0",
         "ejs": "^3.1.5",
         "express": "^4.15.2",
+        "express-fileupload": "^1.2.0",
         "express-handlebars": "^3.0.0",
         "express-messages": "^1.0.1",
         "express-session": "^1.15.2",
@@ -42,6 +44,7 @@
         "kue": "^0.11.6",
         "mongoose": "^5.9.16",
         "morgan": "^1.8.1",
+        "multer": "^1.4.2",
         "node-cmd": "^3.0.0",
         "node-notifier": "^8.0.0",
         "nodemailer": "^6.4.8",
