--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@azure/storage-file-share": "^12.2.0",
     "amqplib": "^0.6.0",
     "compile-run": "^2.3.4",
+    "connect-flash": "^0.1.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
