--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
         "qrate": "^1.2.0",
         "randomstring": "^1.1.5",
         "redis": "^3.0.2",
+        "request": "^2.88.2",
         "socket.io": "^2.3.0",
         "textract": "^2.5.0",
         "vue-prism-editor": "^1.2.2",
