--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "multer": "^1.4.2",
         "node-cmd": "^3.0.0",
         "node-notifier": "^8.0.0",
+        "node-schedule": "^1.3.2",
         "nodemailer": "^6.4.8",
         "npm-run-all": "^4.1.5",
         "passport": "^0.4.1",
