--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "1.0.0",
     "main": "app.js",
     "scripts": {
-        "start": "nodemon app.js"
+        "start": "node src/app.js"
     },
     "engines": {
         "node": "10.16.0"
