--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "display-notification": "^2.0.0",
         "dotenv": "^8.2.0",
         "ejs": "^3.1.5",
+        "email-existence": "^0.1.6",
         "express": "^4.15.2",
         "express-fileupload": "^1.2.0",
         "express-handlebars": "^3.0.0",
